# CPlusPlusNeuralNet

./: CMakeLists.txt  README.md  main.cpp
headers/: DataUtils.h  Layer.h  NeuralNetwork.h  Perceptron.h
src/: DataUtils.cpp  Layer.cpp  NeuralNetwork.cpp  Perceptron.cpp
